# tacticaltwo-game

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mcp.json  ANIMATION_STATE_MACHINE.md  CLAUDE.md  CMakeLists.txt  Gemfile  README.md  Rakefile
.claude/skills/: pico-ecs.md
.claude/skills/pico-ecs/: SKILL.md
assets/sprites/: player.ase  player_combat.ase
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/config/: config.h
src/engine/: CMakeLists.txt  asset.c  asset.h  coro.h  game_state.h  log.c  log.h  platform.h
src/game/: CMakeLists.txt  coro.h  game.c  game.h  world.c  world.h
src/game/systems/: animation_system.c  input_system.c  physics_system.c  player_system.c  render_system.c  systems.h
src/platform/: platform_cute.c  platform_cute.h
tools/: aseprite
